@startuml
'https://plantuml.com/sequence-diagram

javafx.application.Application <|-- Applications
FXMLDocumentController<|-- Item

class FXMLDocumentController implements Initializable

class Applications{

 + start(Stage primaryStage): void
 + {static} main(String[] args): void

}

class FXMLDocumentController
{

    -Text: actiontarget
    -tableView:<Item>

    +colItem: TableColumn<Item, String>
    + colDD: TableColumn<Item, String>
    +colDes: <Item, String>
    +colCompleted: <Item, String>
    +observableList:ObservableList<Item>

     -ItemField: TextField
     -DescriptionField:TextField
     -DuedateField: TextField
     -filterInput:TextField
     -search:TextField


     + addItem(ActionEvent event): void
     + initialize(URL url, ResourceBundle rb): void
     + handleAboutAction(ActionEvent actionEvent): void
     + removeItem(KeyEvent keyEvent) : void
     + onEditchanged(TableColumn.CellEditEvent<Item, String> itemStringCellEditEvent): void
     + clearbutton(ActionEvent actionEvent): void
     + handleExit(ActionEvent actionEvent): void
     + SaveAll(ObservableList<Item>observableList,File file): void
     + handleSave(ActionEvent actionEvent): void
     + handleExistingEL(ActionEvent actionEvent) : void
     + Seachrecord(KeyEvent keyEvent) : void

}

class Item
{
 -  Title :SimpleStringProperty
 - Description: SimpleStringProperty
 - Duedate: SimpleStringProperty
 -Complete: SimpleStringProperty

 + Item()
 + Item(String Title, String Description, String Duedate, String Complete)
+ getTitle(): String
+ setTitle: void
+getComplete(): String
+setComplete: void
+ getDescription() :String
+ setDescription(String D): void
+getDuedate(): String
+setDuedate: void
}



@enduml